--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,5 @@
-# Training
-torch>=2.0.0
-torchvision>=0.15.0
-scikit-learn>=1.3.0
-matplotlib>=3.7.0
-tqdm>=4.65.0
-pyyaml>=6.0
-
-# API
-fastapi>=0.103.0
-uvicorn[standard]>=0.23.0
-pydantic>=1.10.0
-onnxruntime>=1.16.0
-pillow>=10.0.0
-python-multipart>=0.0.6
-
-# Common
-numpy>=1.24.0
+fastapi
+uvicorn
+onnxruntime
+pillow
+numpy
